<resources>
    <string name="app_name">Guia2-Ejercicio1</string>
    <string name="text_tvTitulo">Hola Mundo - DSM441</string>
    <string name="text_tvPreguntaNombre">¿Cual es tu nombre?</string>
    <string name="text_tvPreguntaApellido">¿Cual es tu Apellido?</string>
    <string name="hint_etNombre">Jhone Doe</string>
    <string name="hint_etApellido">De la Garza</string>
    <string name="text_btnSaludar">Saludar</string>
    <string name="text_btnLimpiar">Limpiar</string>
</resources>