<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#AFAFAF"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <!-- 1. Titulo -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tvTitulo"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp" />
    <!-- 2. Campos de texto -->
    <TextView
        android:id="@+id/tvPreguntaNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_tvPreguntaNombre"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="6dp" />
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_etNombre"
        android:inputType="text"
        android:padding="14dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/edit_text"/>
    <!-- 3. Botones -->
    <Button
        android:id="@+id/btnSaludar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnSaludar"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="12dp" />
    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnLimpiar"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        android:textColor="#000000"/>
    <!-- 4. Resultados -->
    <TextView
        android:id="@+id/tvSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HOLA!"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginHorizontal="20dp"/>
    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Te saludan reverentes las nuevas generaciones"
        android:textSize="28sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"/>

</LinearLayout>